[gd_scene load_steps=5 format=3 uid="uid://mainscene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ui"]
bg_color = Color(0, 0, 0, 0.5)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.5, 0.8, 1, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 50.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 80.0
text = "Lives: 3"

[node name="HighScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 110.0
text = "High Score: 0"

[node name="SliceTrail" type="Line2D" parent="."]
width = 5.0
default_color = Color(1, 1, 1, 1)